# openfish-cli

./: .gitignore  Cargo.toml  PUBLIC_RELEASE_CHECKLIST.md  README.md  RELEASE.md
.github/workflows/: ci.yml  release.yml
openfish-cli/: Cargo.toml  README.md  install.sh
openfish-cli/Formula/: openfish.rb
openfish-cli/src/: auth.rs  config.rs  main.rs  shell.rs
openfish-cli/src/commands/: approve.rs  auctions.rs  bonds.rs  bridge.rs  clob.rs  comments.rs  ctf.rs  data.rs  disputes.rs  events.rs  markets.rs  mod.rs  profiles.rs  questions.rs  series.rs  setup.rs  sports.rs  tags.rs  upgrade.rs  wallet.rs
openfish-cli/src/output/: approve.rs  auctions.rs  bonds.rs  bridge.rs  comments.rs  data.rs  disputes.rs  events.rs  markets.rs  mod.rs  profiles.rs  questions.rs  series.rs  sports.rs  tags.rs
openfish-cli/src/output/clob/: account.rs  books.rs  markets.rs  orders.rs  prices.rs
openfish-cli/tests/: cli_integration.rs
openfish-client-sdk/: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
openfish-client-sdk/examples/: approvals.rs  bridge.rs  check_approvals.rs  ctf.rs  data.rs  rtds_crypto_prices.rs
openfish-client-sdk/examples/clob/: async.rs  authenticated.rs  aws_authenticated.rs  builder_authenticated.rs  heartbeats.rs  streaming.rs  unauthenticated.rs
openfish-client-sdk/examples/gamma/: client.rs  streaming.rs
openfish-client-sdk/src/: auth.rs  error.rs  lib.rs  types.rs
openfish-client-sdk/src/bridge/: client.rs  mod.rs
openfish-client-sdk/src/clob/: client.rs  mod.rs
scripts/: public_safety_scan.py
(+25 files in other folders)
