[workspace]
members = [
    "openfish-cli",
    "openfish-client-sdk",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.88.0"
license = "MIT"
repository = "https://github.com/billcheung10/openfish-cli"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
