[package]
name = "openfish-cli"
version = "0.1.4"
edition = "2024"
rust-version = "1.88.0"
description = "CLI for Openfish — browse markets, trade, and manage positions"
license = "MIT"
repository = "https://github.com/billcheung10/openfish-cli"
keywords = ["openfish", "prediction-markets", "trading", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "openfish"
path = "src/main.rs"

[dependencies]
openfish-client-sdk = { path = "../openfish-client-sdk", features = ["gamma", "data", "bridge", "clob", "ctf"] }
alloy = { version = "1.6.3", default-features = false, features = ["providers", "sol-types", "contract", "reqwest", "reqwest-rustls-tls", "signer-local", "signers"] }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tabled = "0.17"
rust_decimal = "1"
anyhow = "1"
chrono = "0.4"
dirs = "6"
rustyline = "15"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
rust_decimal_macros = "1"
